--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
 				<!-- etape 3 -->
 	    <nav class="secondary-block">
-						<h2>Rouhullah KARIMI.</h2>
+						<h2>Rouhullah KARIMI</h2>
 						<ul>
 									<li><a href="#profile">Présentation</a></li> 
 									<li><a href="#xp">Formation</a></li> 
