--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="content">
 						<h1> Rouhullah KARIMI </h1>
 						<h2> Dévelopeur Web Débutant </h2>
-						<img src="2018-03-06-12-04-50-402.jpg" />
+						<img src="IMG-20190526-WA0005.jpg" />
 				</div>			
 		</header>
 				<!-- etape 6 -->
